[gd_scene load_steps=4 format=3 uid="uid://b4woicggddkls"]

[ext_resource type="Theme" uid="uid://pt1hrfiuwfpg" path="res://theme.tres" id="1"]
[ext_resource type="Script" path="res://src/screens/menu/Menu.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://caxdir30m2j4v" path="res://icon.png" id="3"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1")
script = ExtResource("2")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
anchor_right = 0.4
anchor_bottom = 0.711111
texture = ExtResource("3")
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
anchor_left = 0.48125
anchor_top = 0.298611
anchor_right = 0.791406
anchor_bottom = 0.8125
metadata/_edit_use_anchors_ = true

[node name="Continue" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "CONTINUE"

[node name="StartGame" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "START"

[node name="Settings" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "SETTINGS"

[connection signal="pressed" from="VBoxContainer/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="VBoxContainer/StartGame" to="." method="_on_StartGame_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
